--- a/app/assets/stylesheets/components/users/user_show.scss
+++ b/app/assets/stylesheets/components/users/user_show.scss
@@ -503,6 +503,11 @@
   cursor: pointer;
 }
 
+.other-user-profile-location-icon,
+.user-profile-location-icon {
+  margin-right: 8px;
+}
+
 .user-profile-location-city-country,
 .other-user-profile-location-city-country {
   word-break: break-word;
