--- a/app/assets/stylesheets/components/header.scss
+++ b/app/assets/stylesheets/components/header.scss
@@ -12,7 +12,7 @@ nav {
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: 10;
+  z-index: 11;
 }
 
 header > a {
@@ -97,12 +97,24 @@ img {
   top: 10px;
 }
 
-.header-icon-user, .header-icon-null {
+.header-icon-user, .header-plane-icon {
   margin-right: 15px;
   img {
     height: 32px;
     width: 32px;
   }
+}
+
+.header-bell-icon {
+  margin-left: 15px;
+  margin-right: 20px;
+  position: relative;
+  top: 1px;
+  cursor: pointer;
+}
+
+.header-plane-icon {
+  cursor: pointer;
 }
 
 .header-search {
@@ -147,7 +159,8 @@ input::placeholder {
 }
 
 @media (max-width: 600px) {
-  .header-icon-null {
+  .header-plane-icon,
+  .header-bell-icon {
     display: none;
   }
 }
