fixed profile nav bar switch

--- a/app/assets/stylesheets/components/users/user_show.scss
+++ b/app/assets/stylesheets/components/users/user_show.scss
@@ -794,6 +794,38 @@
   }
 }
 
+.user-profile-nav-bar-link-1-highlighted{
+  margin-left: auto;
+  outline: none;
+  border: none;
+  background-color: #ffffff;
+  display: flex;
+  flex: 0 0 auto;
+  align-items: center;
+  text-align: center;
+  padding: 0px 8px;
+  p {
+    display: flex;
+    align-items: center;
+    box-sizing: border-box;
+    height: 36px;
+    font-weight: bold;
+    color: rgb(109, 115, 120);
+    font-size: 16px;
+    line-height: 20px;
+    letter-spacing: 0px;
+    margin: 0px;
+    font-family: Helvetica;
+    cursor: pointer;
+    color: rgb(8, 112, 209);
+    box-shadow: rgb(8, 112, 209) 0px -2px inset;
+  }
+  p:hover{
+    color: rgb(8, 112, 209);
+    box-shadow: rgb(8, 112, 209) 0px -2px inset;
+  }
+}
+
 .user-profile-nav-bar-link-2 {
   outline: none;
   border: none;
@@ -816,6 +848,37 @@
     margin: 0px;
     font-family: Helvetica;
     cursor: pointer;
+  }
+  p:hover{
+    color: rgb(8, 112, 209);
+    box-shadow: rgb(8, 112, 209) 0px -2px inset;
+  }
+}
+
+.user-profile-nav-bar-link-2-highlighted {
+  outline: none;
+  border: none;
+  background-color: #ffffff;
+  display: flex;
+  flex: 0 0 auto;
+  align-items: center;
+  text-align: center;
+  padding: 0 8px;
+  p {
+    display: flex;
+    align-items: center;
+    box-sizing: border-box;
+    height: 36px;
+    font-weight: bold;
+    color: rgb(109, 115, 120);
+    font-size: 16px;
+    line-height: 20px;
+    letter-spacing: 0px;
+    margin: 0px;
+    font-family: Helvetica;
+    cursor: pointer;
+    color: rgb(8, 112, 209);
+    box-shadow: rgb(8, 112, 209) 0px -2px inset;
   }
   p:hover{
     color: rgb(8, 112, 209);
@@ -852,6 +915,37 @@
   }
 }
 
+.user-profile-nav-bar-link-3-highlighted {
+  outline: none;
+  border: none;
+  background-color: #ffffff;
+  display: flex;
+  flex: 0 0 auto;
+  align-items: center;
+  text-align: center;
+  padding: 0 8px;
+  p {
+    display: flex;
+    align-items: center;
+    box-sizing: border-box;
+    height: 36px;
+    font-weight: bold;
+    color: rgb(109, 115, 120);
+    font-size: 16px;
+    line-height: 20px;
+    letter-spacing: 0px;
+    margin: 0px;
+    font-family: Helvetica;
+    cursor: pointer;
+    color: rgb(8, 112, 209);
+    box-shadow: rgb(8, 112, 209) 0px -2px inset;
+  }
+  p:hover{
+    color: rgb(8, 112, 209);
+    box-shadow: rgb(8, 112, 209) 0px -2px inset;
+  }
+}
+
 .user-profile-nav-bar-link-4 {
   outline: none;
   border: none;
@@ -874,6 +968,37 @@
     margin: 0px;
     font-family: Helvetica;
     cursor: pointer;
+  }
+  p:hover{
+    color: rgb(8, 112, 209);
+    box-shadow: rgb(8, 112, 209) 0px -2px inset;
+  }
+}
+
+.user-profile-nav-bar-link-4-highlighted {
+  outline: none;
+  border: none;
+  background-color: #ffffff;
+  display: flex;
+  flex: 0 0 auto;
+  align-items: center;
+  text-align: center;
+  padding: 0 8px;
+  p {
+    display: flex;
+    align-items: center;
+    box-sizing: border-box;
+    height: 36px;
+    font-weight: bold;
+    color: rgb(109, 115, 120);
+    font-size: 16px;
+    line-height: 20px;
+    letter-spacing: 0px;
+    margin: 0px;
+    font-family: Helvetica;
+    cursor: pointer;
+    color: rgb(8, 112, 209);
+    box-shadow: rgb(8, 112, 209) 0px -2px inset;
   }
   p:hover{
     color: rgb(8, 112, 209);
@@ -910,6 +1035,37 @@
   }
 }
 
+.user-profile-nav-bar-link-5-highlighted {
+  outline: none;
+  border: none;
+  background-color: #ffffff;
+  display: flex;
+  flex: 0 0 auto;
+  align-items: center;
+  text-align: center;
+  padding: 0 8px;
+  p {
+    display: flex;
+    align-items: center;
+    box-sizing: border-box;
+    height: 36px;
+    font-weight: bold;
+    color: rgb(109, 115, 120);
+    font-size: 16px;
+    line-height: 20px;
+    letter-spacing: 0px;
+    margin: 0px;
+    font-family: Helvetica;
+    cursor: pointer;
+    color: rgb(8, 112, 209);
+    box-shadow: rgb(8, 112, 209) 0px -2px inset;
+  }
+  p:hover{
+    color: rgb(8, 112, 209);
+    box-shadow: rgb(8, 112, 209) 0px -2px inset;
+  }
+}
+
 .user-profile-nav-bar-link-6:last-of-type {
   margin-right: auto;
   outline: none;
@@ -933,6 +1089,38 @@
     margin: 0px;
     font-family: Helvetica;
     cursor: pointer;
+  }
+  p:hover{
+    color: rgb(8, 112, 209);
+    box-shadow: rgb(8, 112, 209) 0px -2px inset;
+  }
+}
+
+.user-profile-nav-bar-link-6-highlighted:last-of-type {
+  margin-right: auto;
+  outline: none;
+  border: none;
+  background-color: #ffffff;
+  display: flex;
+  flex: 0 0 auto;
+  align-items: center;
+  text-align: center;
+  padding: 0 8px;
+  p {
+    display: flex;
+    align-items: center;
+    box-sizing: border-box;
+    height: 36px;
+    font-weight: bold;
+    color: rgb(109, 115, 120);
+    font-size: 16px;
+    line-height: 20px;
+    letter-spacing: 0px;
+    margin: 0px;
+    font-family: Helvetica;
+    cursor: pointer;
+    color: rgb(8, 112, 209);
+    box-shadow: rgb(8, 112, 209) 0px -2px inset;
   }
   p:hover{
     color: rgb(8, 112, 209);
