--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
+    <%= favicon_link_tag asset_path('android-chrome-192x192.png') %>
 
     <script type="text/javascript">
       window.userIcon = '<%= image_url('userpic.png') %>';
