fixed minor bug in images around comments

--- a/app/assets/stylesheets/components/images/image_update_form.scss
+++ b/app/assets/stylesheets/components/images/image_update_form.scss
@@ -47,7 +47,7 @@
   line-height: 36px;
   font-size: 16px;
   font-weight: 700px;
-  cursor: not-allowed;
+  cursor: pointer;
   svg {
     margin-right: 10px;
     position: relative;
