--- a/app/assets/stylesheets/components/header.scss
+++ b/app/assets/stylesheets/components/header.scss
@@ -23,6 +23,11 @@ header > a {
 .logo {
   font-size: 24px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 900;
+}
+
+.logo-text {
+  font-weight: bold;
 }
 
 header > div > .user-auth-buttons {
