working on splash

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,17 @@
       window.uploadIcon = '<%= image_url('upload_icon.png') %>';
       window.infoIcon = '<%= image_url('info_icon.png') %>';
       window.arrowLeftIcon = '<%= image_url('arrow-pointing-left.png') %>';
+      window.editorChoiceImage1 = '<%= image_url('banner-editor-desktop.png') %>';
+      window.editorChoiceImage2 = '<%= image_url('banner-editor-tablet.png') %>';
+      window.editorChoiceImage3 = '<%= image_url('banner-editor-mobile.png') %>';
+      window.editorImage1 = '<%= image_url('editor-image-1.png') %>';
+      window.editorImage2 = '<%= image_url('editor-image-2.png') %>';
+      window.editorImage3 = '<%= image_url('editor-image-3.png') %>';
+      window.editorImage4 = '<%= image_url('editor-image-4.png') %>';
+      window.editorImage5 = '<%= image_url('editor-image-5.png') %>';
+      window.editorImage6 = '<%= image_url('editor-image-6.png') %>';
+      window.editorImage7 = '<%= image_url('editor-image-7.png') %>';
+      window.editorImage8 = '<%= image_url('editor-image-8.png') %>';
     </script>
   </head>
 
