--- a/app/assets/stylesheets/components/splash.scss
+++ b/app/assets/stylesheets/components/splash.scss
@@ -172,6 +172,249 @@
   max-width: 470px;
 }
 
+.editor-choice-container {
+  background-image: url(banner-editor-mobile.png);
+  max-width: 100%;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  display: flex;
+  position: relative;
+  height: 264px;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.splash-layout-box-container {
+  max-width: 100%;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  background-color: rgb(12, 239, 232);
+  height: 96px;
+  width: 96px;
+  border-radius: 50%;
+  margin-bottom: 16px;
+}
+
+.splash-layout-box {
+  max-width: 100%;
+  position: relative;
+  height: 64px;
+  width: 64px;
+  .svg {
+    overflow: hidden;
+  }
+}
+
+.editor-choice-title {
+  span {
+    font-size: 36px;
+    line-height: 40px;
+    margin: 0;
+    color: rgb(255, 255, 255);
+    font-family: Helvetica;
+    font-weight: bold;
+  }
+}
+
+.editor-content-container {
+  width: 100%;
+  max-width: 100%;
+  margin: 0px auto;
+  // padding-left: 16px;
+  // padding-right: 16px;
+  padding-top: 16px;
+}
+
+.editor-content-info {
+  display: flex;
+  flex-wrap: wrap;
+  // margin: 0px -8px;
+}
+
+.editor-content-info-inner {
+  max-width: 100%;
+  display: flex;
+  padding-bottom: 24px;
+  flex-direction: column;
+  align-items: center;
+}
+
+.editor-content-info-title {
+  font-size: 24px;
+  line-height:28px;
+  font-weight: bold;
+  margin: 0px 0px 8px;
+  color: rgb(34, 34, 34);
+  font-family: Helvetica;
+}
+
+.editor-content-info-para {
+  font-size: 16px;
+  line-height: 20px;
+  color: rgb(34, 34, 34);
+  font-family: Helvetica;
+  max-width: 740px;
+  margin: 0px auto;
+}
+
+.join-button {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0px 16px;
+  border-radius: 100px;
+  font-weight: bold;
+  margin: 16px 0px 0px;
+  background-color: rgb(34, 34, 34);
+  color: rgb(255, 255, 255);
+  border: none;
+  width: 100%;
+  height: 56px;
+  min-width: 216px;
+  line-height: 56px;
+  font-size: 21px;
+  transition: background-color 0.1s ease 0s;
+}
+
+.join-button:hover {
+  background-color: rgb(34, 34, 34);
+  color: rgb(255, 255, 255);
+}
+
+.editor-images-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  justify-content: center;
+  max-width: 1130px;
+  width: 100%;
+  margin: 0px auto;
+  align-items: center;
+}
+
+.editor-image-container {
+  padding-left: 8px;
+  padding-right: 8px;
+  margin-bottom: 16px;
+  max-width: 100%;
+  position: relative;
+}
+
+.editor-image {
+  width: 100%;
+  height: auto;
+  max-width: 100%;
+  vertical-align: middle;
+  border-style: none;
+}
+
+// @media (min-width: 1440px) {
+//   .editor-content-info-inner {
+//     padding-left: 8px;
+//     padding-right: 8px;
+//   }
+// }
+
+@media (min-width: 1024px) {
+  .editor-choice-container {
+    background-image: url(banner-editor-desktop.png);
+  }
+
+  .splash-layout-box-container {
+    margin-bottom: 24px;
+  }
+
+  .editor-choice-title {
+    span {
+      font-size: 64px;
+      line-height: 68px;
+    }
+  }
+
+  // .editor-content-container {
+  //   padding-left: 64px;
+  //   padding-right: 64px;
+  // }
+  .editor-content-info-inner {
+    width: 100%;
+  }
+
+  .editor-content-info-para {
+    max-width: 100%;
+  }
+
+  .editor-image {
+    max-height: 255px;
+  }
+}
+
+@media (min-width: 987px) {
+  .editor-image {
+    max-height: 250px;
+  }
+}
+
+@media (min-width: 768px) {
+  .editor-choice-container {
+    height: 400px;
+    background-image: url(banner-editor-tablet.png);
+  }
+
+  // .editor-content-container {
+  //   padding-left: 32px;
+  //   padding-right: 32px;
+  //   padding-top: 32px;
+  // }
+
+  .editor-content-info-inner {
+    padding-bottom: 32px;
+  }
+
+  .editor-content-info-title {
+    margin-bottom: 16px;
+  }
+
+  .editor-content-info-para {
+    max-width: 100%;
+  }
+
+  .join-button {
+    width: auto;
+    padding: 0px 32px;
+    line-height: 64px;
+    font-size: 24px;
+  }
+
+  .editor-images-container {
+    padding-bottom: 32px;
+  }
+
+  .editor-image {
+    max-height: 220px;
+  }
+}
+
+@media (max-width: 600px) {
+  .editor-image {
+    max-height: 260px;
+  }
+}
+
+@media (max-width: 475px) {
+  .editor-image {
+    max-height: 206px;
+  }
+}
+
+@media (max-width: 415px) {
+  .editor-image {
+    max-height: 176px;
+    width: auto;
+  }
+}
+
 @media (max-width: 1275px) {
   .splash-app {
     display: none;
